--- a/MVPCatalogueApp.xcodeproj/xcshareddata/xcschemes/MVPCatalogueApp.xcscheme
+++ b/MVPCatalogueApp.xcodeproj/xcshareddata/xcschemes/MVPCatalogueApp.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4D008E8F26A1DCD200BBED57"
+               BuildableName = "MVPCatalogueAppTests.xctest"
+               BlueprintName = "MVPCatalogueAppTests"
+               ReferencedContainer = "container:MVPCatalogueApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
